--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "lottery-react",
   "version": "0.1.0",
   "private": true,
+  "engines" : { 
+    "npm" : "<=7.0.0",
+    "node" : "<=16.0.0"
+  }
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
